--- a/dulaj-portfolio/src/index.css
+++ b/dulaj-portfolio/src/index.css
@@ -24,11 +24,13 @@ a:hover {
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  background-color: #ffffff;
+  color: #213547;
+  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
 }
+
 
 h1 {
   font-size: 3.2em;
